Fix grid alignment issue
removed 2nd function of appending to each div and appended all square
to the same div, then used flex wrap to line the grid up correctly

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 #container {
    display: flex;
    flex-direction: row;
+   max-height: 864px;
+   max-width: 864px;
+   flex-wrap: wrap;
 }
